// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with a custom message 1`] = `
<div
  className="src-shared-components-no-entries-index__container"
>
  Custom
</div>
`;

exports[`should render correctly with the default message 1`] = `
<div
  className="src-shared-components-no-entries-index__container"
>
  No Entries
</div>
`;
